--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,7 +9,8 @@ website:
       - href: index.qmd
         text: Home
       - about.qmd
-
+      - href: hw1.qmd
+        text: 숙제1
 format:
   html:
     theme: cosmo
