--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,7 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: about.qmd
       - href: hw1.qmd
         text: 숙제1
 format:
