--- a/_quarto.yml
+++ b/_quarto.yml
@@ -14,6 +14,8 @@ website:
         text: hw1 
       - href: note 3.qmd
         text: note3
+      - href: presentation1_traditional.qmd
+        text: presentation1
 format:
   html:
     theme: cosmo
