--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,15 +10,9 @@ website:
         text: Home
       - href: about.qmd
         text: about
-      - href: hw1.qmd
-        text: hw1 
-      - href: hw2.qmd
-        text: hw2
-      - href: note 3.qmd
-        text: note3
-      - href: presentation1_traditional.qmd
-        text: presentation1
-        
+      - href: blog.qmd
+        text: Blog
+
 format:
   html:
     theme: cosmo
